--- a/action.yaml
+++ b/action.yaml
@@ -26,13 +26,16 @@ runs:
       run: |
         
         if [[ -n "$UPDATE-DEPLOYMENT-LIST" ]]; then
+            echo "In IF"
             while IFS= read -r line; do
+              echo "In Loop"
               if [[ -n "$line" ]]; then
                 echo "Update folder: ${line}/**/image.yaml"
               fi
             done <<< "$SECRETS_FROM_FILES"
         fi
 
+        echo "Done"
       
       shell: bash
       
