--- a/action.yaml
+++ b/action.yaml
@@ -30,6 +30,7 @@ runs:
               if [[ -n "$line" ]]; then
                 echo "Update folder: deploy/overlays/staging/${line}/image.yaml"
                 sed -ri "s~image: (.*):(.*)~image: \1:${{github.sha}}~g" deploy/overlays/staging/${line}/image.yaml
+                cat deploy/overlays/staging/${line}/image.yaml
               fi
             done <<< "$UPDATE_DEPLOYMENT_LIST"
         fi
