--- a/action.yaml
+++ b/action.yaml
@@ -22,17 +22,14 @@ runs:
         
         if [[ -n "$UPDATE_DEPLOYMENT_LIST" ]]; then
             while IFS= read -r line; do
-              if [[ -n "$line" ]]; then
-                 
+              if [[ -n "$line" ]]; then 
                  if [ "$line" != "**" ] && [ ! -f "deploy/overlays/staging/$line/image.yaml" ]; then
                     echo "Error: Failed to update deploy/overlays/staging/${line}/image.yaml, file doesn't exists."
                     break
-                 fi
-                 
-                echo "Updating folder: deploy/overlays/staging/${line}/image.yaml"
+                 fi  
+                echo "Updating deploy/overlays/staging/${line}/image.yaml"
                 sed -ri "s~image: (.*):(.*)~image: \1:${{github.sha}}~g" deploy/overlays/staging/${line}/image.yaml
                 cat deploy/overlays/staging/${line}/image.yaml | grep "image:"
-                
                 echo " "
               fi
             done <<< "$UPDATE_DEPLOYMENT_LIST"
