--- a/action.yaml
+++ b/action.yaml
@@ -37,7 +37,7 @@ runs:
         fi
       shell: bash
     - name: Commit image update changes
-      if: ${ env.UPDATED_TAG }
+      if: env.UPDATED_TAG
       run: |
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
