--- a/action.yaml
+++ b/action.yaml
@@ -23,13 +23,14 @@ runs:
         if [[ -n "$UPDATE_DEPLOYMENT_LIST" ]]; then
             while IFS= read -r line; do
               if [[ -n "$line" ]]; then 
-                 if [ "$line" != "**" ] && [ ! -f "deploy/overlays/staging/$line/image.yaml" ]; then
-                    echo "Error: Failed to update deploy/overlays/staging/${line}/image.yaml, file doesn't exists."
+                 IMAGE_FILE = "deploy/overlays/staging/$line/image.yaml"   
+                 if [ "$line" != "**" ] && [ ! -f $IMAGE_FILE ]; then
+                    echo "Error: Failed to update $IMAGE_FILE, file doesn't exists."
                     continue
                  fi  
-                echo "Updating deploy/overlays/staging/${line}/image.yaml"
-                sed -ri "s~image: (.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" deploy/overlays/staging/${line}/image.yaml
-                cat deploy/overlays/staging/${line}/image.yaml | grep "image:"
+                echo "Updating $IMAGE_FILE"
+                sed -ri "s~image: (.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" $IMAGE_FILE
+                cat $IMAGE_FILE | grep "image:"
                 echo " "
                 echo "UPDATED_TAG=true" >> $GITHUB_ENV
               fi
