--- a/action.yaml
+++ b/action.yaml
@@ -24,7 +24,7 @@ runs:
             while IFS= read -r line; do
               if [[ -n "$line" ]]; then 
                  IMAGE_FILE = "deploy/overlays/staging/$line/image.yaml"   
-                 if [ "$line" != "**" ] && [ ! -f $IMAGE_FILE ]; then
+                 if [ "$line" != "**" ] && [ ! -f "$IMAGE_FILE" ]; then
                     echo "Error: Failed to update $IMAGE_FILE, file doesn't exists."
                     continue
                  fi  
