--- a/action.yaml
+++ b/action.yaml
@@ -35,7 +35,7 @@ runs:
             fi            
           done <<< "$UPDATE_DEPLOYMENT_LIST"
             
-          if [[ ! -z $(git status -s) ]]   
+          if [[ ! -z $(git status -s) ]]; then   
             echo "Some changes"
             echo "UPDATED_TAG=true" >> $GITHUB_ENV
           fi
