--- a/action.yaml
+++ b/action.yaml
@@ -38,7 +38,9 @@ runs:
               echo " "
             fi            
           done <<< "$UPDATE_DEPLOYMENT_LIST"
-            
+          
+          git status -s
+          
           if [[ ! -z $(git status -s) ]]; then   
             echo "UPDATED_TAG=true" >> $GITHUB_ENV
           else
