--- a/action.yaml
+++ b/action.yaml
@@ -42,7 +42,7 @@ runs:
               cat $IMAGE_FILE | grep "image:" 
               
               #sed -ri "s~image: (.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
-              sed -ri "s~image: (${{env.GCR_PLATFORM}}.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
+              sed -ri "s~image: (gcr.io/platform-staging-200307/.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
               (gcr.io/project/.*)
 
               echo "New TAG:"
