--- a/action.yaml
+++ b/action.yaml
@@ -41,7 +41,7 @@ runs:
               echo "Previous TAG:"
               cat $IMAGE_FILE | grep "image:" 
               
-              sed -ri "s~image: (gcr.io/platform-staging-200307/.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
+              sed -ri "s~image: gcr.io/platform-staging-200307/(.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
               (gcr.io/project/.*)
 
               echo "New TAG:"
