--- a/action.yaml
+++ b/action.yaml
@@ -13,7 +13,7 @@ inputs:
   deployment-path: 
     description: 'List of deployments where image tag should be updated, by default `**` to udpate all deployments'
     required: true
-    default: "deploy/overlays/staging"
+    default: "./deploy/overlays/staging"
   gcr-platform:
     description: 'GCR platform name e.g. platform-staging, platform-production'
     required: true
@@ -41,7 +41,7 @@ runs:
               echo "Previous TAG:"
               cat $IMAGE_FILE | grep "image:" 
               
-              sed -ri "s~image: (${{env.GCR_PLATFORM}}.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" "$IMAGE_FILE"
+              sed -ri "s~image: (${{env.GCR_PLATFORM}}.*):(.*)~image: \1:${{env.IMAGE_TAG}}~g" $IMAGE_FILE
 
               echo "New TAG:"
               cat $IMAGE_FILE | grep "image:"
