--- a/action.yaml
+++ b/action.yaml
@@ -12,11 +12,11 @@ inputs:
     required: false
   deployment-path: 
     description: 'List of deployments where image tag should be updated, by default `**` to udpate all deployments'
-    required: true
+    required: false
     default: "./deploy/overlays/staging"
   gcr-platform:
     description: 'GCR platform name e.g. platform-staging, platform-production'
-    required: true
+    required: false
     default: 'gcr.io/platform-staging-200307/'
 runs:
   using: 'composite'
