--- a/action.yaml
+++ b/action.yaml
@@ -18,6 +18,9 @@ inputs:
     description: 'GCR platform name e.g. platform-staging, platform-production'
     required: false
     default: 'gcr.io/platform-staging-200307/'
+  token:
+    description: Gihub token with permission to write in protective branches
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -58,13 +61,11 @@ runs:
         fi
       shell: bash
     - name: Commit image update changes
-      env:
-        ARGOCD_GITHUB_TOKEN: ${{ secrets.ARGOCD_GITHUB_TOKEN }}
       if: env.UPDATED_TAG 
       run: |
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
-        git remote set-url origin https://x-access-token:$ARGOCD_GITHUB_TOKEN@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}
         git commit -am "build: automatic update of argocd deployment" -m "updated image tag to '${{ inputs.image-tag }}'"
         git push 
       shell: bash   
