--- a/action.yaml
+++ b/action.yaml
@@ -63,9 +63,13 @@ runs:
     - name: Commit image update changes
       if: env.UPDATED_TAG 
       run: |
+        mv .git/config .git/config.temp
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
+        git remote add origin https://github.com/${{ github.repository }}
+        git config --global push.default current
         git remote set-url origin https://x-access-token:${{ inputs.token }}@github.com/${{ github.repository }}
         git commit -am "build: automatic update of argocd deployment" -m "updated image tag to '${{ inputs.image-tag }}'"
-        git push 
+        git push
+        mv .git/config.temp .git/config
       shell: bash   
