Test image update

--- a/action.yaml
+++ b/action.yaml
@@ -63,7 +63,7 @@ runs:
     - name: Commit image update changes
       if: env.UPDATED_TAG 
       run: |
-        echo github.actor
+        echo ${{github.actor}}
         mv .git/config .git/config.temp
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
