--- a/action.yaml
+++ b/action.yaml
@@ -23,6 +23,7 @@ inputs:
     required: true
 runs:
   using: 'composite'
+  if: contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
   steps:
     - name: Update image tag
       env:
