--- a/action.yaml
+++ b/action.yaml
@@ -23,9 +23,9 @@ inputs:
     required: true
 runs:
   using: 'composite'
-  if: contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
   steps:
     - name: Update image tag
+      if: contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
       env:
         UPDATE_DEPLOYMENT_LIST: ${{ inputs.update-deployment-list }}
         IMAGE_TAG: ${{ inputs.image-tag }}
@@ -62,9 +62,9 @@ runs:
         fi
       shell: bash
     - name: Commit image update changes
-      if: env.UPDATED_TAG 
+      if: env.UPDATED_TAG == 'true' && contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
       run: |
-        echo ${{github.actor}}
+        echo ${{env.UPDATED_TAG}}
         mv .git/config .git/config.temp
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
