--- a/action.yaml
+++ b/action.yaml
@@ -69,3 +69,35 @@ runs:
         git commit -am "build: automatic update of argocd deployment - [skip ci]" -m "updated image tag to '${{ inputs.image-tag }}'"
         git push
       shell: bash   
+    - name: Staging Tests ✅
+      if: ${{ success() }}
+      # set the merge commit status check
+      # using GitHub REST API
+      # see https://docs.github.com/en/rest/reference/repos#create-a-commit-status
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "context": "Staging Tests",
+          "state": "success",
+          "description": "Staging tests passed",
+          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        }'
+    - name: Staging Tests 🚨
+      if: ${{ failure() }}
+      # set the merge commit status check
+      # using GitHub REST API
+      # see https://docs.github.com/en/rest/reference/repos#create-a-commit-status
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "context": "Staging Tests",
+          "state": "failure",
+          "description": "Staging tests failed",
+          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        }'
