--- a/action.yaml
+++ b/action.yaml
@@ -18,14 +18,13 @@ inputs:
     description: 'GCR platform name e.g. platform-staging, platform-production'
     required: false
     default: 'gcr.io/platform-staging-200307/'
-#  token:
-#    description: Gihub token with permission to write in protective branches
-#    required: true
+  token:
+    description: 'GiHub token with permission to write in protective branches'
+    required: true
 runs:
   using: 'composite'
   steps:
     - name: Update image tag
-      if: contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
       env:
         UPDATE_DEPLOYMENT_LIST: ${{ inputs.update-deployment-list }}
         IMAGE_TAG: ${{ inputs.image-tag }}
@@ -62,13 +61,18 @@ runs:
         fi
       shell: bash
     - name: Commit image update changes
-      if: env.UPDATED_TAG == 'true' && contains(github.event.head_commit.message, 'automatic update of argocd deployment') == false
+      if: env.UPDATED_TAG == 'true'
       run: |
+        mv .git/config .git/config.temp
         git config --global user.name 'argocd-image-updater'
         git config --global user.email 'argocd-image-updater@users.noreply.github.com'
-        git commit -am "build: automatic update of argocd deployment - [skip ci]" -m "updated image tag to '${{ inputs.image-tag }}'"
+        git remote add origin https://github.com/${{ github.repository }}
+        git config --global push.default current
+        git remote set-url origin https://${{ inputs.token }}@github.com/${{ github.repository }}
+        git commit -am "build: automatic update of argocd deployment [skip ci]" -m "updated image tag to '${{ inputs.image-tag }}'"
         git push
-      shell: bash   
+        mv .git/config.temp .git/config
+      shell: bash
     - name: Staging Tests
       if: ${{ success() }}
       run: |
