--- a/action.yaml
+++ b/action.yaml
@@ -78,7 +78,7 @@ runs:
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
         --data '{
           "context": "ArgoCD image updater test",
@@ -92,7 +92,7 @@ runs:
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
         --data '{
           "context": "ArgoCD image updater test",
