--- a/action.yaml
+++ b/action.yaml
@@ -74,31 +74,31 @@ runs:
         echo "COMMIT_ID=$(git rev-parse --verify HEAD)" >> $GITHUB_ENV
         mv .git/config.temp .git/config
       shell: bash
-#    - name: Staging Tests
-#      if: ${{ success() }}
-#      run: |
-#        curl --request POST \
-#        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
-#        --header 'authorization: Bearer ${{ inputs.token }}' \
-#        --header 'content-type: application/json' \
-#        --data '{
-#          "context": "ArgoCD image updater test",
-#          "state": "success",
-#          "description": "ArgoCD image updater passed",
-#          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-#        }'
-#      shell: bash
-#    - name: Staging Tests
-#      if: ${{ failure() }}
-#      run: |
-#        curl --request POST \
-#        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
-#        --header 'authorization: Bearer ${{ inputs.token }}' \
-#        --header 'content-type: application/json' \
-#        --data '{
-#          "context": "ArgoCD image updater test",
-#          "state": "failure",
-#          "description": "ArgoCD image updater failed",
-#          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-#        }'
-#      shell: bash
+    - name: Staging Tests
+      if: ${{ success() }}
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+        --header 'authorization: Bearer ${{ inputs.token }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "context": "ArgoCD image updater test",
+          "state": "success",
+          "description": "ArgoCD image updater passed",
+          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        }'
+      shell: bash
+    - name: Staging Tests
+      if: ${{ failure() }}
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+        --header 'authorization: Bearer ${{ inputs.token }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "context": "ArgoCD image updater test",
+          "state": "failure",
+          "description": "ArgoCD image updater failed",
+          "target_url": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        }'
+      shell: bash
