--- a/action.yaml
+++ b/action.yaml
@@ -78,7 +78,7 @@ runs:
       if: ${{ success() }}
       run: |
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
         --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
         --data '{
@@ -92,7 +92,7 @@ runs:
       if: ${{ failure() }}
       run: |
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ env.COMMIT_ID }} \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
         --header 'authorization: Bearer ${{ inputs.token }}' \
         --header 'content-type: application/json' \
         --data '{
