--- a/action.yaml
+++ b/action.yaml
@@ -21,11 +21,15 @@ inputs:
   token:
     description: 'GiHub token with permission to write in protective branches'
     required: true
+  branch-name:
+    description: Braach name
+    required: false
+    default: 'refs/heads/dev refs/heads/staging refs/heads/master refs/heads/main'
 runs:
   using: 'composite'
   steps:
     - name: Update image tag
-      if: contains('refs/heads/dev refs/heads/staging refs/heads/master refs/heads/main', github.ref)
+      if: contains(github.event.inputs.branch-name, github.ref) || contains(format('refs/heads/{0}', inputs.branch-name,github.ref))
       env:
         UPDATE_DEPLOYMENT_LIST: ${{ inputs.update-deployment-list }}
         IMAGE_TAG: ${{ inputs.image-tag }}
