--- a/action.yaml
+++ b/action.yaml
@@ -28,6 +28,16 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Validate data
+      run: |
+        BRANCH_NAME=${{ inputs.branch-name }}
+
+        if [[ -z "${BRANCH_NAME// }" ]]; then
+          echo "Branch name is empty"
+          echo "BRANCH_NAME=dev" >> $GITHUB_ENV
+        fi
+        
+      shell: bash
     - name: Update image tag
       #${{ contains(github.event.inputs.branch-name, github.ref) || contains(format('refs/heads/{0}', github.event.inputs.branch-name), github.ref) }}
       if: (env.BRANCH_NAME != '') && contains('refs/heads/staging refs/heads/master refs/heads/main', github.ref) || contains(format('refs/heads/{0}', env.BRANCH_NAME), github.ref)
