--- a/action.yaml
+++ b/action.yaml
@@ -34,9 +34,9 @@ runs:
 
         if [[ -z "${BRANCH_NAME// }" ]]; then
           echo "Branch name is empty"
-          echo "BRANCH_NAME=dev" >> $GITHUB_ENV
+          BRANCH_NAME="dev"
         fi
-        
+        echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
       shell: bash
     - name: Update image tag
       #${{ contains(github.event.inputs.branch-name, github.ref) || contains(format('refs/heads/{0}', github.event.inputs.branch-name), github.ref) }}
@@ -47,7 +47,7 @@ runs:
         DEPLOYMENT_PATH: ${{ inputs.deployment-path }}
         GCR_PLATFORM: ${{ inputs.gcr-platform }}
         UPDATED_TAG: false
-        BRANCH_NAME: ${{ inputs.branch-name }}
+        BRANCH_NAME: ${{ env.BRANCH_NAME }}
       run: |
         if [[ -n "$UPDATE_DEPLOYMENT_LIST" ]]; then
           while IFS= read -r line; do
