--- a/action.yaml
+++ b/action.yaml
@@ -33,8 +33,7 @@ runs:
       run: |
         BRANCH_NAME="${{ inputs.branch-name }}"
         if [[ $BRANCH_NAME != "dev" || $BRANCH_NAME != "staging" || $BRANCH_NAME != "master" || $BRANCH_NAME != "main" ]]; then
-          echo "Invalid branch name: $BRANCH_NAME /n Only one of the following branches are vaild:[ staging | dev | master | main ]"
-          exit 1
+          exit "\nInvalid branch name: $BRANCH_NAME \n Only one of the following branches are vaild:[ staging | dev | master | main ]\n"
         fi
       shell: bash
     - name: Update image tag
