--- a/action.yaml
+++ b/action.yaml
@@ -32,14 +32,14 @@ runs:
     - name: Validate data
       run: |
         BRANCH_NAME="${{ inputs.branch-name }}"
-        if [[ $BRANCH_NAME != "dev" && $BRANCH_NAME != "staging" && $BRANCH_NAME != "master" && $BRANCH_NAME != "main" ]]; then
+        if [[ "$BRANCH_NAME" != "dev" && "$BRANCH_NAME" != "staging" && "$BRANCH_NAME" != "master" && "$BRANCH_NAME" != "main" ]]; then
           printf "\n **Auto deployment failed** \n Invalid branch name: $BRANCH_NAME \n Only one of the following branches are vaild: [ staging | dev | master | main ]\n\n"
           exit 1
         fi
 
-        REF_NAME=$(echo ${GITHUB_REF#refs/*/})
-        if [[ $BRANCH_NAME != $REF_NAME ]]
-          printf "\n Auto deployment will not run as the selected branch `$BRANCH_NAME` is not same as current branch `$REF_NAME` \n"
+        REF_NAME="$(echo ${GITHUB_REF#refs/*/})"
+        if [[ "$BRANCH_NAME" != "$REF_NAME" ]]
+          printf "\n Auto deployment will not run as the selected branch '$BRANCH_NAME' is not same as current branch '$REF_NAME' \n"
           exit 0
         fi
       shell: bash
