--- a/action.yaml
+++ b/action.yaml
@@ -25,7 +25,6 @@ inputs:
     description: Branch name
     required: false
     default: 'dev'
-#if [[ -z "${BRANCH_NAME// }" ]]; then
 runs:
   using: 'composite'
   steps:
@@ -38,8 +37,8 @@ runs:
         fi
 
         REF_NAME="$(echo ${GITHUB_REF#refs/*/})"
-        if [[ "$BRANCH_NAME" != "$REF_NAME" ]]
-          printf "\n Auto deployment will not run as the selected branch '$BRANCH_NAME' is not same as current branch '$REF_NAME' \n"
+        if [[ "$BRANCH_NAME" != "$REF_NAME" ]]; then
+          printf "\n Auto deployment will not run as the selected branch `$BRANCH_NAME` is not same as current branch `$REF_NAME` \n"
           exit 0
         fi
       shell: bash
